[project]
name = "mj-robot"
version = "0.1.0"
description = "Teaching a robot to dance in Michael Jackson's style"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco",
    "gym"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md"]
